--- a/templates/cases/case_form.html
+++ b/templates/cases/case_form.html
@@ -1,14 +1,13 @@
+{% extends "base.html" %} {% block content %}
 <div id="modal">
   <h3>New Dispute case</h3>
   <form
-    hx-post="{% url 'cases:create' %}"
-    hx-target="#case-list"
-    hx-swap="outerHTML"
+    action="{% url 'cases:case_create' %}"
     method="post"
   >
     {% csrf_token %} 
     {{form.as_p}}
     <button type="submit">Save</button>
-    <button onclick="document.getElementById('modal').remove()">Close</button>
   </form>
 </div>
+{% endblock %}
