--- a/templates/cases/case_list.html
+++ b/templates/cases/case_list.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h2>Dispute Cases</h2>
 
-<button hx-get="{% url 'cases:case_create' %}" hx-target="#modal-container" hx-trigger="click">
+<button hx-get="{% url 'cases:case_form' %}" hx-target="#modal-container" hx-trigger="click">
     New Case
 </button>
 
