--- a/templates/orders/order_form.html
+++ b/templates/orders/order_form.html
@@ -1,9 +1,7 @@
-{% extends "base.html" %}
-{% block content %}
+{% extends "base.html" %} {% block content %}
 <h2>Create Order</h2>
 <form method="post" action="{% url 'orders:order_create' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
+  {% csrf_token %} {{ form.as_p }}
   <button type="submit">Save</button>
 </form>
 {% endblock %}
